# vlad-projects

./: .gitignore
localdocs-rag/: .env.example  .gitignore  README.md  pyproject.toml
localdocs-rag/data/: api_reference.md  deployment_manual.md  sample_guide.md
localdocs-rag/localdocs_rag/: __init__.py  cli.py  config.py  document_processor.py  rag_chain.py  vector_store.py
localdocs-rag/tests/: __init__.py  test_config.py
sql_agent/: .env.example  README.md  pyproject.toml
sql_agent/data/: sales.csv
sql_agent/sql_agent/: cli.py  db.py  llm.py  models.py  tools.py  validators.py
sql_agent/tests/: test_cli.py  test_db_manager.py  test_validator.py
